<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_account"
        android:icon="@drawable/ic_menu_account"
        android:title="@string/menu_account" />
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/menu_add" />
    <item
        android:id="@+id/menu_select"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/menu_select" />
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_menu_power"
        android:title="@string/menu_logout" />
    <item
        android:id="@+id/menu_login"
        android:icon="@drawable/ic_menu_power"
        android:title="@string/menu_login" />
</menu>