<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="5dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/account_text_title"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/account_title"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="@font/dfyuanlightb5" />

        <TextView
            android:id="@+id/account_text_data"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/account_data"
            android:textColor="#4F4F4F"
            android:textStyle="bold"
            android:autoSizeMaxTextSize="18sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/arial" />

        <ImageView
            android:id="@+id/account_img"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_weight="2"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/edit" />

    </LinearLayout>

</androidx.cardview.widget.CardView>